salesforce-metadata/force-app/main/default/objects/Account/fields/Aralco_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Aralco_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Aralco Customer ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>