salesforce-metadata/force-app/main/default/objects/Account/fields/Store_Credit__c.field-meta.xml
<CustomField>
    <fullName>Store_Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Store Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>